organizando a API para se adptar a minha utilidade e minhas variaveis da minha classe.